css/style.css
* {
	box-sizing: border-box;
	margin: 0;
	padding: 0;
}

html {
	font-size: 62.5%;
}

body {
	font-family: 'Inter', sans-serif;
	color: #1d2939;
	overflow-x: hidden;
}

/* GENERAL STYLES */

a:link,
a:visited {
	color: #1d2939;
	text-decoration: none;
	font-weight: 500;
}

.container {
	width: 70%;
	margin: 0 auto;
}

.break {
	display: block;
}

/* scrolling */
/* 
@media screen and (prefers-reduced-motion: no-preference) {
	html {
		-ms-scroll-snap-type: y mandatory;
		scroll-snap-type: y mandatory;
	}
} */

/* SNAP SCROLL */

/* .hero,
.section-projects,
.section-contact {
	scroll-snap-align: start;
} */

/* HERO */

.hero {
	background-color: #f4ead7;
	height: 100vh; /* Fallback for browsers that do not support Custom Properties */
	/* height: calc(var(--vh, 1vh) * 100); */
	position: relative;
	display: flex;
	flex-direction: column;
}

/* nav */

.main-nav {
	padding-top: 6rem;
	padding-right: 12rem;
	padding-left: 6rem;
	display: flex;
	justify-content: space-between;
	align-items: center;
}

.page-number {
	font-size: 2rem;
	font-weight: 700;
}

.page-number span {
	font-size: 1.4rem;
	color: rgba(34, 49, 68, 0.205);
}

.main-nav ul {
	display: flex;
	align-items: center;
	gap: 6rem;
}

.main-nav a:link,
.main-nav a:visited {
	font-size: 2.4rem;
	transition: 200ms ease;
	position: relative;
	color: rgba(29, 41, 57, 0.25);
}
.main-nav a:hover,
.main-nav a:active {
	color: #1d2939;
}

.main-nav a::after {
	content: '';
	position: absolute;
	background-color: #1d2939;
	height: 3px;
	width: 0%;
	left: 0;
	bottom: -3px;
	transition: 200ms;
}
.main-nav a:hover::after {
	width: 100%;
}

.main-nav ul li .active {
	color: #1d2939;
	border-bottom: 3px solid #1d2939;
	width: 100%;
	border-radius: 1px;
}
/* text hero */

.text-hero {
	display: flex;
	justify-content: center;
	align-items: center;
	flex-direction: column;
	padding-top: 14rem;
}

.text-hero h1 {
	font-size: clamp(3.2rem, 4rem + 10vw, 30rem);
	text-transform: uppercase;
	font-weight: 900;
	line-height: 0.9;
}

.text-hero span {
	display: block;
}

.text-hero h3 {
	font-size: 1.6rem;
	text-transform: uppercase;
	letter-spacing: 20px;
	margin-right: -20px;
	display: flex;
	justify-content: center;
}

/* social media */

.social-media {
	font-size: 2.4rem;
	display: flex;
	gap: 2.4rem;
	flex-grow: 1;
	justify-content: center;
	align-items: flex-end;
	padding-bottom: 3rem;
}

.social-media a:link {
	transition: 400ms ease;
}

.social-media a:hover {
	transform: scale(1.15);
}

/* .social-media a:active {
	transform: scale(0.9);
} */

/* PROJECTS */

.page-number-2 {
	padding-top: 6rem;
	padding-left: 6rem;
}

.section-projects {
	min-height: 100vh;
	/* min-height: -webkit-fill-available; */
	position: relative;
}

.title {
	display: flex;
	flex-direction: column;
	gap: 1.2rem;
	padding-top: 2.4rem;
	font-weight: 900;
	font-size: 8rem;
	margin-bottom: 4.8rem;
}

/* CONTACT */

.section-contact {
	min-height: 100vh;
	/* min-height: -webkit-fill-available; */
	background-color: #d7f1cb;
	position: relative;
}

.contact-container {
	padding-bottom: 3.6rem;
}

.contact-content {
	display: flex;
	gap: 6.8rem;
}

.contact-content > * {
	width: 50%;
}

/* .contact-text {
	width: 60%;
}

.form {
	width: 40%;
} */

.contact-title {
	display: flex;
	justify-content: flex-end;
	flex-direction: column;
	margin-bottom: 2.4rem;
}
.contact-title h3,
.form h3 {
	font-size: 2.4rem;
	text-transform: uppercase;
	letter-spacing: 5px;
	font-weight: 500;
	line-height: 1.5;
}

.big-word {
	font-size: 6.8rem;
	font-weight: 300;
}

.underline {
	text-decoration: underline;
}
.contact-text h4 {
	font-size: 2.4rem;
	text-transform: uppercase;
	letter-spacing: 10px;
	font-weight: 500;
	margin-bottom: 1.2rem;
}
.line {
	width: 100%;
	height: 1px;
	background-color: #1d2939;
}

.contact-text p {
	font-size: 1.8rem;
	line-height: 2;
	width: 95%;
	color: #292e35;
	margin-bottom: 1.4rem;
}

/* some contact */
.contact-social-media {
	font-size: 2.4rem;
	display: flex;
	gap: 2.4rem;
	align-items: flex-end;
	margin-top: 2.4rem;
}

.contact-social-media a:link {
	transition: 400ms ease;
}

.contact-social-media a:hover {
	transform: scale(1.15);
}

/* FORM */

.top-row {
	display: flex;
	gap: 1.2rem;
}

input {
	border: none;
	padding: 1.2rem;
	margin-bottom: 1.2rem;
	width: 50%;
	font-size: 1.2rem;
	border: 1px solid transparent;
}

textarea {
	display: block;

	padding: 1.2rem;
	width: 100%;
	text-align: left;
	margin-bottom: 1.2rem;
	height: 20em;
	resize: none;
	border: none;
	font-family: 'Inter', sans-serif;
	font-size: 1.2rem;
	border: 1px solid transparent;
}

input:focus,
textarea:focus {
	outline: none !important;
	border: 1px solid #1d2939;
}

form button {
	border: none;
	background-color: #1d2939;
	color: #fff;
	text-transform: uppercase;
	width: 100%;
	padding: 1.2rem 0;
	cursor: pointer;
	font-size: 1.8rem;
	font-weight: 500;
	letter-spacing: 1px;
	transition: 300ms ease;
}
form button:hover {
	background-color: #324763;
	color: #fff;
}

